--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
       </footer>
     </div>
 
-    
+    <script type="text/javascript" src="http://www.ohloh.net/p/623310/widgets/project_basic_stats.js"></script>
 
   </body>
 </html>
