--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
 
     <link rel="stylesheet" type="text/css" media="screen" href="stylesheets/stylesheet.css">
 
-    <title>xidobi</title>
-       <script type="text/javascript" src="http://www.ohloh.net/p/623310/widgets/project_basic_stats.js"></script>
+    <title><script type="text/javascript" src="http://www.ohloh.net/p/623310/widgets/project_basic_stats.js"></script>xidobi</title>
+       
 
   </head>
 
