--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 
     <link rel="stylesheet" type="text/css" media="screen" href="stylesheets/stylesheet.css">
 
-    <title><script type="text/javascript" src="http://www.ohloh.net/p/623310/widgets/project_basic_stats.js"></script>xidobi</title>
+    <title></script>xidobi</title>
        
 
   </head>
@@ -24,8 +24,7 @@
           <h2 id="project_tagline">A Java library for serial &amp; rfc2217 communication</h2>
 
             <section id="downloads">
-              <a class="zip_download_link" href="https://github.com/ChristianSchwarz/xidobi/zipball/master">Download this project as a .zip file</a>
-              <a class="tar_download_link" href="https://github.com/ChristianSchwarz/xidobi/tarball/master">Download this project as a tar.gz file</a>
+              <script type="text/javascript" src="http://www.ohloh.net/p/623310/widgets/project_basic_stats.js">
             </section>
         </header>
     </div>
