--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
     <div id="header_wrap" class="outer">
         <header class="inner">
           <a id="forkme_banner" href="https://github.com/ChristianSchwarz/xidobi">View on GitHub</a>
-          <img src="https://raw.githubusercontent.com/ChristianSchwarz/xidobi/gh-pages/images/xidobi-logo.png"> </img>
-          <h1 id="project_title">xidobi</h1>
+          
+          <h1 id="project_title"><img src="https://raw.githubusercontent.com/ChristianSchwarz/xidobi/gh-pages/images/xidobi-logo.png"> </img>xidobi</h1>
           <h2 id="project_tagline">A Java library for serial &amp; rfc2217 communication</h2>
 
         </header>
