--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
     <div id="main_content_wrap" class="outer">
       <section id="main_content" class="inner">
         <h3>
-<img src="https://raw.githubusercontent.com/ChristianSchwarz/xidobi2/gh-pages/images/xidobi-logo.png"> </img>
+<img src="images/xidobi-logo.png"> </img>
 <p>
 <a name="welcome-to-xidobi" class="anchor" href="#welcome-to-xidobi"><span class="octicon octicon-link"></span></a>Welcome to xidobi</h3>
 <p><strong>xidobi</strong> is a platform independent library for serial communication in Java 1.5+. It's released under the Apache 2.0 License, so it can be used and modified in open source and commercial projects.</p>
